Fixed pagination alignment

--- a/src/Web/Sfa.Das.Sas.Web/Content/src/styles/fe_toolkit/_typography.scss
+++ b/src/Web/Sfa.Das.Sas.Web/Content/src/styles/fe_toolkit/_typography.scss
@@ -349,6 +349,7 @@ $is-print: false !default;
     text-align: left;
   }
   &.next {
+    float: right;
     text-align: right;
     .arrow-button {
       float: right;
